dataset1235/2025-2/2947369575/users/1530961528/executions/1003782500_2132966528.log
== SUBMISSION (2025-09-01 20:47:33)
-- CODE: 
Nome = input()

nomemaisculo = (nome.upper())

print(nomemaisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 20:47:56)
-- CODE: 
Nome = input()

nomemaisculo = (nome.upper())

print(nomemaisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 20:47:54)
-- CODE: 
Nome = input()

nomemaisculo = (nome.upper())

print(nomemaisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:48:18)
-- CODE: 
Nome = input()

nomemaisculo = (nome.upper())

print(nomemaisculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nomemaisculo = (nome.upper())
                    ^^^^
NameError: name 'nome' is not defined. Did you mean: 'Nome'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:49:13)
-- CODE: 
nome = input()

nomemaisculo = (nome.upper())

print(nomemaisculo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
